# OS_Kolokvium

./: README.md  main.c
.github/workflows/: cmake.yml
factorials-container/: CMakeLists.txt
factorials-container/include/: Factorials.h
factorials-container/src/: Factorials.cpp
factorials-container/tests/: FactorialsTest.cpp
remove-duplicates/: CMakeLists.txt
remove-duplicates/include/: DuplicatesRemover.h
remove-duplicates/src/: DuplicatesRemover.cpp
remove-duplicates/tests/: DuplicatesRemoverTest.cpp
reverse-linked-list/: CMakeLists.txt
reverse-linked-list/include/: LinkedList.h
reverse-linked-list/src/: LinkedList.cpp
reverse-linked-list/tests/: LinkedListTest.cpp
